src/main/java/org/example/utils/error/IngredientStockException.java
package org.example.utils.error;

public class IngredientStockException extends RuntimeException {
    public IngredientStockException(Throwable cause) {
        super(cause);
    }
}
